# schmitriz

./: Application.cpp  DDrawx.h  Debug.h  Desktop.cpp  DirectX.h  DlgAbout.cpp  DlgAbout.h  DlgKeys.cpp  DlgTileset.cpp  Game.cpp  Image.h  Keys.h  Makefile  Makefile.am  Makefile.in  NewGame.h  Object.cpp  Object.h  README.md  Schmitriz.gladep  Schmitriz.prj  Schmitriz.prj.bak  Schmitriz.pws  Settings.cpp  Static.cpp  Tetris.dsp  Tetris.ncb  Tetris.opt  Tetris.plg  Text.cpp  Text.h  Timer.cpp  Timer.h  aclocal.m4  config.h  config.status  configure  configure.in  history.txt  libtool  (+5 more)
Debug/: Application.sbr  Button.sbr  DDrawx.sbr  Debug.sbr  Desktop.sbr  DirectX.sbr  DlgAbout.sbr  DlgKeys.sbr  DlgSimple.sbr  DlgTheme.sbr  DlgTileset.sbr  Game.sbr  Highscore.sbr  Image.sbr  Main.sbr  NewGame.sbr  Object.sbr  Pieces.sbr  Player.sbr  Radio.sbr  Settings.sbr  Static.sbr  Stats.sbr  Tetris.bsc  Text.sbr  Timer.sbr  Title.sbr  resource.res
References/: Scoring.txt  Tetris.hfv
Release/: resource.res
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Application.h  Button.h  Desktop.h  DlgKeys.h  DlgTheme.h  DlgTileset.h  Game.h  Highscore.h  List.h  Main.h  Pieces.h  Player.h  Radio.h  Settings.h  Static.h  Stats.h  Title.h  callbacks.h  dlgSimple.h
setup/: setup.iss
src/: Button.cpp  DDrawx.cpp  Debug.cpp  DirectX.cpp  DlgTheme.cpp  Highscore.cpp  Image.cpp  Main.cpp  Makefile  Makefile.am  Makefile.in  NewGame.cpp  Pieces.cpp  Player.cpp  Radio.cpp  Stats.cpp  Title.cpp  callbacks.cc  dlgSimple.cpp  interface.cc  main.cc  main.ccc
(+10 files in other folders)
