## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = schmitriz

schmitriz_SOURCES = \
	main.cc

schmitriz_LDFLAGS = 

schmitriz_LDADD =  \
	$(GTK_LIBS)

